WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58707
DOM object handles are never removed from cache
https://bugs.webkit.org/show_bug.cgi?id=58707
Summary
DOM object handles are never removed from cache
Geoffrey Garen
Reported
2011-04-15 16:24:11 PDT
DOM object handles are never removed from cache
Attachments
Patch
(5.31 KB, patch)
2011-04-15 16:27 PDT
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-04-15 16:27:44 PDT
Created
attachment 89873
[details]
Patch
Geoffrey Garen
Comment 2
2011-04-15 16:38:09 PDT
Committed
r84049
: <
http://trac.webkit.org/changeset/84049
>
WebKit Review Bot
Comment 3
2011-04-15 18:21:49 PDT
http://trac.webkit.org/changeset/84049
might have broken WinCairo Debug (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug